# denki-client

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
src/: lib.rs  parsers.rs
src/denki_client/: __init__.py  _core.pyi  area.py  client.py  entsoe.py  parsers.py  schemas.py  utils.py
src/entsoe_cli/: __init__.py  client.py  parsers.py  utils.py
src/entsoe_client/: __init__.py  _core.pyi  area.py  client.py  exceptions.py  parsers.py  schemas.py  utils.py
tests/: test_client.py  test_core.py  test_entsoe.py  test_exceptions.py  test_utils.py  test_version.py
