[project]
name = "entsoe-client"
dynamic = ["version"]
description = "Agnostic client for ENTSO-e API."
readme = "README.md"
authors = []
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "narwhals>=1.39.0",
    "python-dateutil>=2.9.0.post0",
    "tenacity>=9.1.2",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "entsoe_client._core"
python-packages = ["entsoe_rs"]
python-source = "src"

[tool.maturin.version]
path = "src/entsoe_client/__init__.py"

[dependency-groups]
dev = [
    "entsoe-py>=0.6.18",
    "ipykernel>=6.29.5",
    "polars[all]>=1.29.0",
    "pytest>=8.3.5",
]

[tool.ruff]
line-length = 120
