[project]
name = "denki-client"
version = "0.1.2"
description = "Agnostic client for ENTSO-e API."
readme = "README.md"
authors = [
    { name = "Tijoxa", email = "92037181+Tijoxa@users.noreply.github.com" },
]
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "httpx>=0.28.1",
    "narwhals>=1.39.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "tenacity>=9.1.2",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "denki_client._core"
python-packages = ["denki_client"]
python-source = "src"

[dependency-groups]
dev = [
    "httpx-limiter>=0.4.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
